# Homework29_Django_Serializers_ViewSet

./: .gitignore  README.md  manage.py  pyproject.toml  utils.py
Homework29_Django_Serializers_ViewSet/: asgi.py  settings.py  urls.py  wsgi.py
ads/: models.py  serializers.py  views.py
ads/migrations/: 0001_initial.py
fixtures/: user.json
users/: admin.py  models.py  serializers.py  views.py
users/migrations/: 0001_initial.py
